# http-beastie

./: CMakeLists.txt  README.md
include/: utils.hpp
src/: main.cpp  utils.cpp
static/: Khalil.html  Sameh.html  abdelaaty.html  amin.html  baboa.html  bavly.html  botros.html  dawoud.html  elsayed.html  hashem.html  kamel.html  mobarez.html  salama.html  selwanes.html  your-last-name.html
